Add dev dependencies

--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
     "body-parser": "^1.10.2",
     "express": "^4.11.1",
     "morgan": "^1.5.1"
+  },
+  "devDependencies": {
+    "chai": "^1.10.0",
+    "karma": "^0.12.31",
+    "karma-chai": "^0.1.0",
+    "karma-cli": "0.0.4",
+    "karma-mocha": "^0.1.10",
+    "mocha": "^2.1.0"
   }
 }
