--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,9 @@
     "client/app/src/bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular-ui-router": "~0.2.13",
+    "angular": "~1.3.10"
+  }
 }
