--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.10.2",
     "express": "^4.11.1",
+    "jade": "^1.9.1",
     "morgan": "^1.5.1"
   },
   "devDependencies": {
