--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "https://github.com/MildHawk/Archivr/issues"
   },
   "homepage": "https://github.com/MildHawk/Archivr",
+  "scripts": {
+    "test": "gulp karma"
+  },
   "dependencies": {
     "body-parser": "^1.10.2",
     "express": "^4.11.1",
@@ -27,9 +30,9 @@
     "gulp": "^3.8.10",
     "gulp-compass": "~2.0.3",
     "gulp-concat": "^2.4.3",
-    "gulp-image": "^0.5.3",
     "gulp-jshint": "~1.9.0",
     "gulp-karma": "0.0.4",
+    "gulp-image": "^0.5.3",
     "gulp-minify-css": "~0.3.11",
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "~1.0.2",
@@ -37,6 +40,7 @@
     "jshint-stylish": "~1.0.0",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.7",
     "karma-cli": "0.0.4",
     "karma-mocha": "^0.1.10",
     "mocha": "^2.1.0",
