--- a/package.json
+++ b/package.json
@@ -24,11 +24,6 @@
   },
   "devDependencies": {
     "chai": "^1.10.0",
-    "karma": "^0.12.31",
-    "karma-chai": "^0.1.0",
-    "karma-cli": "0.0.4",
-    "karma-mocha": "^0.1.10",
-    "mocha": "^2.1.0",
     "gulp": "^3.8.10",
     "gulp-compass": "~2.0.3",
     "gulp-concat": "^2.4.3",
@@ -39,6 +34,12 @@
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "~1.0.2",
     "gulp-watch": "~3.0.0",
-    "jshint-stylish": "~1.0.0"
+    "jshint-stylish": "~1.0.0",
+    "karma": "^0.12.31",
+    "karma-chai": "^0.1.0",
+    "karma-cli": "0.0.4",
+    "karma-mocha": "^0.1.10",
+    "mocha": "^2.1.0",
+    "request": "^2.51.0"
   }
 }
