--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ before_script:
   - 'export DISPLAY=:99.0'
   - 'sh -e /etc/init.d/xvfb start'
   - 'npm install -g gulp karma'
+notifications:
+  email: false
