--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[![Stories in Ready](https://badge.waffle.io/MildHawk/Archivr.png?label=ready&title=Ready)](https://waffle.io/MildHawk/Archivr) # Archivr Because it's hip to add an \"r\" at the end. r.",
   "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
@@ -16,24 +16,24 @@
     "url": "https://github.com/MildHawk/Archivr/issues"
   },
   "homepage": "https://github.com/MildHawk/Archivr",
-  "scripts": {
-    "test": "gulp karma"
-  },
   "dependencies": {
     "body-parser": "^1.10.2",
     "express": "^4.11.1",
     "jade": "^1.9.1",
-    "morgan": "^1.5.1"
+    "mongoose": "^3.8.21",
+    "morgan": "^1.5.1",
+    "request": "^2.51.0"
   },
   "devDependencies": {
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
     "gulp-compass": "~2.0.3",
     "gulp-concat": "^2.4.3",
+    "gulp-image": "^0.5.3",
     "gulp-jshint": "~1.9.0",
     "gulp-karma": "0.0.4",
-    "gulp-image": "^0.5.3",
     "gulp-minify-css": "~0.3.11",
+    "gulp-mocha": "^2.0.0",
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "~1.0.2",
     "gulp-watch": "~3.0.0",
@@ -44,6 +44,7 @@
     "karma-cli": "0.0.4",
     "karma-mocha": "^0.1.10",
     "mocha": "^2.1.0",
-    "request": "^2.51.0"
+    "request": "^2.51.0",
+    "run-sequence": "^1.0.2"
   }
 }
