--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "request": "^2.51.0"
+    "request": "^2.51.0",
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
     "gulp-compass": "~2.0.3",
