--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "body-parser": "^1.10.2",
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
+    "express-jwt": "^1.0.0",
     "express-session": "^1.10.1",
     "jade": "^1.9.1",
-    "mongoose": "^3.8.21",
-    "morgan": "^1.5.1",
     "jwt-simple": "^0.2.0",
     "moment": "^2.9.0",
+    "mongoose": "^3.8.21",
     "mongoose-paginate": "^3.1.3",
     "morgan": "^1.5.1",
     "passport": "^0.2.1",
@@ -52,7 +52,6 @@
     "karma-cli": "0.0.4",
     "karma-mocha": "^0.1.10",
     "mocha": "^2.1.0",
-    "request": "^2.51.0",
     "run-sequence": "^1.0.2"
   }
 }
