--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "[![Stories in Ready](https://badge.waffle.io/MildHawk/Archivr.png?label=ready&title=Ready)](https://waffle.io/MildHawk/Archivr) # Archivr Because it's hip to add an \"r\" at the end. r.",
   "main": "server/index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "gulp test"
+  },
+  "engines": {
+    "node": "0.10.x"
   },
   "repository": {
     "type": "git",
