update npm version for heroku

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "gulp test"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": "0.10.x",
+    "npm": "2.1.x"
   },
   "repository": {
     "type": "git",
