--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "request": "^2.51.0",
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
     "gulp-compass": "~2.0.3",
@@ -47,6 +46,7 @@
     "gulp-karma": "0.0.4",
     "gulp-minify-css": "~0.3.11",
     "gulp-mocha": "^2.0.0",
+    "gulp-preprocess": "^1.2.0",
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "~1.0.2",
     "gulp-watch": "~3.0.0",
@@ -57,6 +57,7 @@
     "karma-cli": "0.0.4",
     "karma-mocha": "^0.1.10",
     "mocha": "^2.1.0",
+    "request": "^2.51.0",
     "run-sequence": "^1.0.2"
   }
 }
