--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "mongoose-paginate": "^3.1.3",
     "morgan": "^1.5.1",
     "passport": "^0.2.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
     "chai": "^1.10.0",
     "gulp-compass": "~2.0.3",
     "gulp-concat": "^2.4.3",
