--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server/index.js",
     "postinstall": "npm run build",
-    "build": "bower install && node node_modules/.bin/gulp build-dev",
+    "build": "./node_modules/bower/bin/bower install && node node_modules/.bin/gulp build-dev",
     "test": "gulp test"
   },
   "engines": {
@@ -25,20 +25,13 @@
   "homepage": "https://github.com/MildHawk/Archivr",
   "dependencies": {
     "body-parser": "^1.10.2",
+    "bower": "^1.3.12",
+    "chai": "^1.10.0",
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
     "express-jwt": "^1.0.0",
     "express-session": "^1.10.1",
     "gulp": "^3.8.10",
-    "jade": "^1.9.1",
-    "jwt-simple": "^0.2.0",
-    "moment": "^2.9.0",
-    "mongoose": "^3.8.21",
-    "mongoose-paginate": "^3.1.3",
-    "morgan": "^1.5.1",
-    "passport": "^0.2.1",
-    "passport-local": "^1.0.0",
-    "chai": "^1.10.0",
     "gulp-compass": "~2.0.3",
     "gulp-concat": "^2.4.3",
     "gulp-image": "^0.5.3",
@@ -50,16 +43,23 @@
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "~1.0.2",
     "gulp-watch": "~3.0.0",
+    "jade": "^1.9.1",
     "jshint-stylish": "~1.0.0",
+    "jwt-simple": "^0.2.0",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.7",
     "karma-cli": "0.0.4",
     "karma-mocha": "^0.1.10",
     "mocha": "^2.1.0",
+    "moment": "^2.9.0",
+    "mongoose": "^3.8.21",
+    "mongoose-paginate": "^3.1.3",
+    "morgan": "^1.5.1",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "request": "^2.51.0",
     "run-sequence": "^1.0.2"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
