--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   "dependencies": {
     "body-parser": "^1.10.2",
     "bower": "^1.3.12",
-    "chai": "^1.10.0",
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
     "express-jwt": "^1.0.0",
@@ -46,12 +45,6 @@
     "jade": "^1.9.1",
     "jshint-stylish": "~1.0.0",
     "jwt-simple": "^0.2.0",
-    "karma": "^0.12.31",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-cli": "0.0.4",
-    "karma-mocha": "^0.1.10",
-    "mocha": "^2.1.0",
     "moment": "^2.9.0",
     "mongoose": "^3.8.21",
     "mongoose-paginate": "^3.1.3",
@@ -61,5 +54,13 @@
     "request": "^2.51.0",
     "run-sequence": "^1.0.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "chai": "^1.10.0",
+    "karma": "^0.12.31",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-cli": "0.0.4",
+    "karma-mocha": "^0.1.10",
+    "mocha": "^2.1.0"
+  }
 }
