--- a/package.json
+++ b/package.json
@@ -30,6 +30,18 @@
     "express": "^4.11.1",
     "express-jwt": "^1.0.0",
     "express-session": "^1.10.1",
+    "jade": "^1.9.1",
+    "jsonwebtoken": "^3.2.2",
+    "moment": "^2.9.0",
+    "mongoose": "^3.8.21",
+    "mongoose-paginate": "^3.1.3",
+    "morgan": "^1.5.1",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "request": "^2.51.0",
+    "chai": "^1.10.0",
     "gulp": "^3.8.10",
     "gulp-compass": "~2.0.3",
     "gulp-concat": "^2.4.3",
@@ -44,7 +56,6 @@
     "gulp-watch": "~3.0.0",
     "jade": "^1.9.1",
     "jshint-stylish": "~1.0.0",
-    "jwt-simple": "^0.2.0",
     "moment": "^2.9.0",
     "mongoose": "^3.8.21",
     "mongoose-paginate": "^3.1.3",
