--- a/package.json
+++ b/package.json
@@ -57,10 +57,13 @@
     "gulp-watch": "~3.0.0",
     "jade": "^1.9.1",
     "jshint-stylish": "~1.0.0",
+    "jwt-simple": "^0.2.0",
+    "lodash": "^3.0.0",
     "moment": "^2.9.0",
     "mongoose": "^3.8.21",
     "mongoose-paginate": "^3.1.3",
     "morgan": "^1.5.1",
+    "nconf": "^0.7.1",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "request": "^2.51.0",
