--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "mongoose-paginate": "^3.1.3",
     "morgan": "^1.5.1",
     "passport": "^0.2.1",
-    "passport-local": "^1.0.0"
+    "passport-facebook": "^1.0.3",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.2"
   },
   "devDependencies": {
     "request": "^2.51.0",
@@ -64,12 +66,6 @@
     "mongoose-paginate": "^3.1.3",
     "morgan": "^1.5.1",
     "nconf": "^0.7.1",
-    "passport": "^0.2.1",
-    "passport-local": "^1.0.0",
-    "request": "^2.51.0",
-    "run-sequence": "^1.0.2"
-  },
-  "devDependencies": {
     "chai": "^1.10.0",
     "gulp-exit": "0.0.2",
     "karma": "^0.12.31",
