--- a/package.json
+++ b/package.json
@@ -32,20 +32,6 @@
     "express": "^4.11.1",
     "express-jwt": "^1.0.0",
     "express-session": "^1.10.1",
-    "jade": "^1.9.1",
-    "jsonwebtoken": "^3.2.2",
-    "moment": "^2.9.0",
-    "mongoose": "^3.8.21",
-    "mongoose-paginate": "^3.1.3",
-    "morgan": "^1.5.1",
-    "passport": "^0.2.1",
-    "passport-facebook": "^1.0.3",
-    "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.2"
-  },
-  "devDependencies": {
-    "request": "^2.51.0",
-    "chai": "^1.10.0",
     "gulp": "^3.8.10",
     "gulp-compass": "~2.0.3",
     "gulp-concat": "^2.4.3",
@@ -58,21 +44,29 @@
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "~1.0.2",
     "gulp-watch": "~3.0.0",
+    "gulp-exit": "0.0.2",
     "jade": "^1.9.1",
     "jshint-stylish": "~1.0.0",
-    "jwt-simple": "^0.2.0",
+    "jsonwebtoken": "^3.2.2",
     "lodash": "^3.0.0",
     "moment": "^2.9.0",
     "mongoose": "^3.8.21",
     "mongoose-paginate": "^3.1.3",
     "morgan": "^1.5.1",
     "nconf": "^0.7.1",
-    "gulp-exit": "0.0.2",
+    "passport": "^0.2.1",
+    "passport-facebook": "^1.0.3",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.2"
+  },
+  "devDependencies": {
+    "chai": "^1.10.0",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.7",
     "karma-cli": "0.0.4",
     "karma-mocha": "^0.1.10",
-    "mocha": "^2.1.0"
+    "mocha": "^2.1.0",
+    "request": "^2.51.0"
   }
 }
