--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/MildHawk/Archivr",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^2.9.3",
     "body-parser": "^1.10.2",
     "bower": "^1.3.12",
     "cookie-parser": "^1.3.3",
@@ -66,7 +67,6 @@
     "mongoose-paginate": "^3.1.3",
     "morgan": "^1.5.1",
     "nconf": "^0.7.1",
-    "chai": "^1.10.0",
     "gulp-exit": "0.0.2",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
