--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bluebird": "^2.9.3",
     "body-parser": "^1.10.2",
     "bower": "^1.3.12",
+    "cloudinary": "^1.1.1",
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
     "express-jwt": "^1.0.0",
