--- a/package.json
+++ b/package.json
@@ -33,6 +33,21 @@
     "express": "^4.11.1",
     "express-jwt": "^1.0.0",
     "express-session": "^1.10.1",
+    "jade": "^1.9.1",
+    "jsonwebtoken": "^3.2.2",
+    "moment": "^2.9.0",
+    "mongoose": "^3.8.21",
+    "mongoose-paginate": "^3.1.3",
+    "morgan": "^1.5.1",
+    "passport": "^0.2.1",
+    "passport-facebook": "^1.0.3",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.2",
+    "url-to-screenshot": "^0.6.0"
+  },
+  "devDependencies": {
+    "request": "^2.51.0",
+    "chai": "^1.10.0",
     "gulp": "^3.8.10",
     "gulp-compass": "~2.0.3",
     "gulp-concat": "^2.4.3",
