--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mongoose-paginate": "^3.1.3",
     "morgan": "^1.5.1",
     "nconf": "^0.7.1",
+    "nightmare": "^1.7.0",
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
     "passport-local": "^1.0.0",
