--- a/.jshintrc
+++ b/.jshintrc
@@ -3,14 +3,14 @@
     "esnext": true,
     "bitwise": true,
     "camelcase": true,
-    "curly": true,
+    "curly": false,
     "eqeqeq": true,
     "immed": true,
     "indent": 2,
     "latedef": true,
     "newcap": true,
     "noarg": true,
-    "predef": ["angular", "beforeEach", "describe", "it", "afterEach"],
+    "predef": ["angular"],
     "quotmark": "single",
     "regexp": true,
     "undef": true,
@@ -18,5 +18,9 @@
     "strict": false,
     "trailing": true,
     "smarttabs": true,
-    "white": true
+    "white": true,
+
+    // Environments
+    "mocha": true,
+    "jasmine": true
 }
