--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "karma-cli": "0.0.4",
     "karma-mocha": "^0.1.10",
     "mocha": "^2.1.0",
-    "request": "^2.51.0"
+    "request": "^2.51.0",
+    "supertest": "^0.15.0"
   }
 }
