--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ before_script:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 
+after_script:
+- ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+
 # Disable email notifications
 notifications:
   email: false
