--- a/package.json
+++ b/package.json
@@ -65,12 +65,16 @@
   },
   "devDependencies": {
     "chai": "^1.10.0",
+    "gulp-coveralls": "^0.1.3",
+    "gulp-istanbul": "^0.5.0",
+    "gulp-plumber": "^0.6.6",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.7",
     "karma-cli": "0.0.4",
     "karma-mocha": "^0.1.10",
     "mocha": "^2.1.0",
+    "mocha-lcov-reporter": "0.0.1",
     "request": "^2.51.0",
     "supertest": "^0.15.0"
   }
