--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ before_script:
 - sh -e /etc/init.d/xvfb start
 
 after_script:
-- ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+# - ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+ - ./node_modules/.bin/gulp coveralls
 
 # Disable email notifications
 notifications:
