--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
     "body-parser": "^1.10.2",
     "bower": "^1.3.12",
     "cloudinary": "^1.1.1",
+    "connect-redis": "^2.2.0",
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
     "express-jwt": "^1.0.0",
     "express-session": "^1.10.1",
     "gulp": "^3.8.10",
     "gulp-compass": "~2.0.3",
-    "gulp-coveralls": "^0.1.3",
     "gulp-concat": "^2.4.3",
+    "gulp-coveralls": "^0.1.3",
     "gulp-exit": "0.0.2",
     "gulp-image": "^0.5.3",
     "gulp-istanbul": "^0.5.0",
@@ -63,6 +64,7 @@
     "passport-facebook": "^1.0.3",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.2",
+    "redis": "^0.12.1",
     "run-sequence": "^1.0.2",
     "url-to-screenshot": "^0.6.0"
   },
