--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "url-to-screenshot": "^0.6.0"
   },
   "devDependencies": {
+    "angular-mocks": "^1.3.11",
     "chai": "^1.10.0",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
