--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.7",
     "karma-cli": "0.0.4",
+    "karma-coverage": "^0.2.7",
     "karma-mocha": "^0.1.10",
     "mocha": "^2.1.0",
     "request": "^2.51.0",
