--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,9 @@
   ],
   "dependencies": {
     "angular-ui-router": "~0.2.13",
-    "angular": "~1.3.10"
+    "angular": "~1.3.10",
+    "sketch.js": "intridea/sketch.js",
+    "jquery": "~2.1.3",
+    "jqScribble": "jimdoescode/jqScribble#~2.0.0"
   }
 }
